<resources>
    <string name="app_name">Adverts Ox.pl</string>
    <string name="title_activity_main">OX.PL Wynajmę</string>

    <string name="action_settings">Settings</string>
    <string name="advert_details">Szczegóły</string>
    <string name="title_advert_details_activity">Szczegóły ogłoszenia</string>
    <string name="sale_all">Sprzedam</string>
    <string name="sale_properties">Nieruchomości</string>
    <string name="sale_properties_houses_flats">Domy i mieszkania</string>
    <string name="sale_properties_plots">Działki</string>
    <string name="sale_properties_other">Inne</string>
    <string name="sale_properties_rent">Wynajmnę</string>
    <string name="sale_autos_all">Motoryzacja</string>
    <string name="sale_autos">Samochody</string>
    <string name="sale_autos_other">Inne</string>
</resources>
